--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "good-console": "^6.4.0",
     "good-squeeze": "^5.0.2",
     "hapi": "^16.6.0",
+    "hapi-cors-headers": "^1.0.0",
     "joi": "^11.0.2",
     "nedb": "^1.8.0",
     "nedb-promises": "^1.1.1"
