--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "hapi-cors-headers": "^1.0.0",
     "joi": "^11.0.2",
     "nedb": "^1.8.0",
-    "nedb-promises": "^1.1.1"
+    "nedb-promises": "^1.1.1",
+    "pino": "^4.7.2"
   },
   "devDependencies": {
+    "@types/hapi": "^16.1.10",
     "nodemon": "^1.12.1"
   }
 }
